# minecraft-model-renderer

./: .gitignore  LICENSE  pom.xml
renderer-bindings/: pom.xml
renderer-bindings/src/main/kotlin/xyz/xenondevs/renderer/: MinecraftModelRenderer.kt
renderer-rs/: Cargo.toml
renderer-rs/src/: lib.rs  util.rs
renderer-rs/src/model/: direction.rs  mod.rs  model.rs  unresolved_model.rs
renderer-rs/src/model/resource/: mod.rs  resource_id.rs  resource_loader.rs  resource_manager.rs
renderer-rs/src/util/: image.rs  jni.rs  math.rs  mod.rs
renderer-skeleton/: pom.xml
src/main/kotlin/xyz/xenondevs/renderer/: MinecraftModelRenderer.kt
src/main/kotlin/xyz/xenondevs/renderer/model/: Direction.kt  Model.kt  UnresolvedModel.kt
src/main/kotlin/xyz/xenondevs/renderer/scene/: Scene.kt
src/main/kotlin/xyz/xenondevs/renderer/util/: ImageUtils.kt  JsonUtils.kt
src/main/kotlin/xyz/xenondevs/renderer/vector/: Vector3d.kt  VectorExtensions.kt  Vectors.kt
src/main/resources/assets/minecraft/models/block/: bell_between_walls.json  bell_ceiling.json  bell_floor.json  bell_wall.json  black_shulker_box.json  blue_shulker_box.json  brown_shulker_box.json  chest.json  chest_template.json  cyan_shulker_box.json  enchanting_table.json  ender_chest.json  gray_shulker_box.json  green_shulker_box.json  light_blue_shulker_box.json  light_gray_shulker_box.json  lime_shulker_box.json  magenta_shulker_box.json  orange_shulker_box.json  pink_shulker_box.json  purple_shulker_box.json  red_shulker_box.json  shulker_box.json  shulker_box_template.json  trapped_chest.json  (+2 more)
(+39 files in other folders)
