[package]
name = "minecraft-model-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
serde_json = "1.0.96"
image = "0.24.6"
regex = "1.8.1"
lazy_static = "1.4.0"
jni = "0.21.1"

[lib]
crate_type = ["cdylib"]